<resources>
    <string name="app_name">Design Materials</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Design Materials</string>
    <string name="nav_header_subtitle">JAndroid Team</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menu Strings -->
    <string name="menu_home">Home</string>
    <string name="menu_design">Design</string>
    <string name="menu_views">Views</string>
    <string name="menu_elements">Elements</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_links">Links</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_settings">Settings</string>

    <!-- Settings Strings -->
    <string name="settingPixelTitle">Use Px values</string>
    <string name="settingPixelSummary">Use px instead of dp (Device Pixels)</string>

    <string name="settingRgbTitle">Use Rgb values</string>
    <string name="settingRgbSummary">Use Rgb instead of Hex</string>

    <string name="settingJsonTitle">Send me JSON object</string>
    <string name="settingJsonSummary">Send me a JSON object with selected values</string>

    <string name="settingAppColorsTitle">Use Selected Colors</string>
    <string name="settingAppColorsSummary">Change the app theme to the colors you have selected</string>

    <!-- HomeFragment Strings -->
    <string name="homeTitle">WELCOME TO \n DESIGN MATERIALS</string>
    <string name="homeDescription">Pick your color, favourite font and design your app how you want, the way you want.</string>
    <string name="homePhotoDescription">Design Photo</string>
    <string name="homeDesignButton">Start Designing</string>
    <string name="leftCurly">{</string>

    <!-- DesignFragment Strings -->
    <string name="designTitle">Pick your Colors</string>
    <string name="designLightColor">Light Color</string>
    <string name="designDarkColor">Dark Color</string>
    <string name="designSaveColorsButton">Elements</string>

    <string name="designPrimaryColorDisplayPrimary">Primary</string>
    <string name="designPrimaryColorDisplaySecondary">Secondary</string>
    <string name="designColorSavedMessage">Color Saved. Check the home Page</string>

    <!-- ElementFragment String -->
    <string name="elementMultiAutoCompleteTextView">The MultiAutoCompleteTextView Lorem ipsum has a lot of characters</string>
    <string name="elementAutoCompleteTextView">The AutoCompleteTextView Lorem ipsum has a lot of characters</string>
    <string name="elementEditText">The Edit text Lorem ipsum has a lot of characters</string>

    <string name="elementHeading">Heading Text</string>
    <string name="elementBody">Body Text</string>
    <string name="elementButtons">Buttons</string>

    <string name="elementButtonViews">Views</string>

    <string name="elementFontTitle">Font Family</string>
    <string name="elementRoboto">Roboto</string>
    <string name="elementOpenSans">Open Sans</string>
    <string name="elementMontserrat">Montserrat</string>
    <string name="elementPlayfairDisplay">Playfair Display</string>
    <string name="elementDarkerGrotesque">Darker Grotesque</string>

    <string name="elementFontWeightTitle">Font Weight</string>
    <string name="elementFontWeightBold">Bold</string>
    <string name="elementFontWeightLight">Light</string>
    <string name="elementFontWeightRegular">Regular</string>

    <string name="elementFontSizeTitle">Font Size</string>

    <string name="elementSaveButton">Save</string>

    <!-- LayoutViews Strings -->
    <string name="layoutViewOneTitle">Login</string>
    <string name="layoutViewOneEmail">Email</string>
    <string name="layoutViewOneEmailHint">Example@email.com</string>
    <string name="layoutViewOnePassword">Password</string>
    <string name="layoutViewOnePasswordHint">Password</string>
    <string name="layoutViewOneCheckBox">Remember my Login</string>
    <string name="layoutViewOneLogin">Login</string>

    <string name="layoutViewTwoTitle">GOT Dragon Male T-shirt</string>
    <string name="layoutViewTwoPictureDescription">Sample Product</string>
    <string name="layoutViewTwoWidgetSmall">Small</string>
    <string name="layoutViewTwoWidgetMedium">Medium</string>
    <string name="layoutViewTwoWidgetLarge">Large</string>
    <string name="layoutViewTwoQuantity">Quantity</string>
    <string name="layoutViewTwoLongSleeve">Long Sleeve</string>
    <string name="layoutViewTwoAddToCart">Add to Cart</string>

    <!-- LinksFragment Strings -->
    <string name="textButton">Text Tech Support</string>
    <string name="phoneButton">Phone Tech Support</string>
    <string name="emailButton">Email Design Choices</string>
    <string name="mapButton">View Material Design Headquarters</string>

    <string name="permissionAlertDialogButtonText">OK</string>
    <string name="errorNoSoftware">No software installed to complete task</string>

    <string name="smsPermissionTitle">SMS Permission</string>
    <string name="smsPermissionMessage">We need access to SMS in order to send a message</string>
    <string name="smsIntentMessage">I am having trouble with </string>

    <string name="phonePermissionTitle">Phone Permission</string>
    <string name="phonePermissionMessage">We need access to your phone in order to make a call.</string>

    <string name="emailIntentSubject">Design Colors from the Design Materials App</string>
    <string name="emailIntentMessageStart">Here are the styles you picked:</string>
    <string name="emailIntentMessageJson">Because you selected JSON, below is the JSON object:</string>
    <string name="emailIntentPrimaryColor">\n\nPrimary Color:&#32; </string>
    <string name="emailIntentPrimaryColorLight">\nPrimary Color Light:&#32; </string>
    <string name="emailIntentPrimaryColorDark">\nPrimary Color Dark:&#32; </string>
    <string name="emailIntentSecondaryColor">\nSecondary Color:&#32; </string>
    <string name="emailIntentSecondaryColorLight">\nSecondary Color Light:&#32; </string>
    <string name="emailIntentSecondaryColorDark">\nSecondary Color Dark:&#32; </string>
    <string name="emailIntentHeadingFontName">\nHeading Font Name:&#32; </string>
    <string name="emailIntentBodyFontName">\nBody Font Name:&#32; </string>
    <string name="emailIntentButtonFontName">\nButton Font Name:&#32; </string>
    <string name="emailIntentHeadingFontWeight">\nHeading Font Weight:&#32; </string>
    <string name="emailIntentBodyFontWeight">\nBody Font Weight:&#32; </string>
    <string name="emailIntentButtonFontWeight">\nButton Font Weight:&#32; </string>
    <string name="emailIntentHeadingFontSize">\nHeading Font Size:&#32; </string>
    <string name="emailIntentBodyFontSize">\nBody Font Size:&#32; </string>
    <string name="emailIntentButtonFontSize">\nButton Font Size:&#32; </string>

    <string name="emailIntentMessageEnd">\n\nThank you for using our app!</string>

    <!-- Credits Strings -->
    <string name="creditGithubLinkName">Github</string>

    <string name="creditNdricimTitle">Designer</string>
    <string name="creditNdricimName">Ndricim Strazimiri</string>
    <string name="creditNdricimLink">https://github.com/nstrazimiri</string>

    <string name="creditAbelTitle">Idea Man</string>
    <string name="creditAbelName">Abel Anderson</string>
    <string name="creditAbelLink">https://github.com/AbelSAnderson</string>

    <string name="creditArchitectImageTitle">Architect Design Image</string>
    <string name="creditArchitectImageName">Designed by FreePik</string>
    <string name="creditArchitectImageLinkName">FreePik.com</string>
    <string name="creditArchitectImageLink">https://www.freepik.com</string>



    <string name="creditImagesBy">Images by</string>
    <string name="creditPexelsCopyright">Copyright Free by</string>
    <string name="creditPexelsName">Pexels</string>
    <string name="creditPexelsUrl">https://www.pexels.com</string>

    <string name="creditColorPickerLibrary">Color Picker Library</string>
    <string name="creditColorPickerName">Color Picker</string>
    <string name="creditColorPickerBy">skydoves</string>
    <string name="creditColorPickerUrl">https://www.github.com/skydoves/ColorPickerView</string>

    <string name="creditSeekBarLibrary">Discrete SeekBar Library</string>
    <string name="creditSeekBarName">Discrete SeekBar</string>
    <string name="creditSeekBarBy">AnderWeb</string>
    <string name="creditSeekBarUrl">https://www.github.com/AnderWeb/discreteSeekBar</string>

    <string name="creditFontAwesomeLibrary">Icons By</string>
    <string name="creditFontAwesomeName">Font Awesome</string>
    <string name="creditFontAwesomeBy">Industry Standart Icons</string>
    <string name="creditFontAwesomeUrl">https://www.fontawesome.com</string>

    <!-- Placeholder Strings -->
    <string name="text_heading">The lazy dog jumps happy</string>
    <string name="text_short">Too she being house a even empire team- an as samples we of late person.</string>
    <string name="text_long_long"> Too she being house a even empire team- an as samples we of late person.  Too she being house a even empire team- an as samples we of late person. Client times, found harmonic the of the tag picture the okay. Boss salutary me. Too she being house a even empire team- an as samples we of late person.Client times, found harmonic the of the tag picture the okay. Boss salutary me. Too she being house a even empire team- an as samples we of late person.</string>
    <string name="text_long">Client times, found harmonic the of the tag picture the okay. Boss salutary me. Too she being house a even empire team- an as samples we of late person.</string>
    <string name="button_text">Contact Us</string>
    <string name="button_text_share">Share</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">iPhone 11</string>
    <string name="twitt_this_app">Tweet about this App</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_message">Share on Facebook</string>
    <string name="share_url">https://www.jandroidteam.ca</string>
    <string name="share_text">Check out this message who helps you build amazing apps.</string>
</resources>
