<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_design"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/menu_design" />
        <item
            android:id="@+id/nav_views"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_views" />
    </group>

    <item android:title="@string/menu_tools">
        <menu>
            <item
                android:id="@+id/nav_elements"
                android:icon="@drawable/ic_view_list_black_24dp"
                android:title="@string/menu_elements" />
            <item
                android:id="@+id/nav_links"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_links" />
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/menu_credits" />
        </menu>
    </item>

</menu>
