<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/titlePadding"
        android:text="@string/homeTitle"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:lineSpacingMultiplier="0.6"
        android:lineSpacingExtra="1dp"
        android:textSize="@dimen/elementTitleFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/designButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimary"
        android:drawableRight="@drawable/ic_menu_send"
        android:drawablePadding="@dimen/btn_drawable_padding"
        android:paddingLeft="@dimen/btn_paddin_left_right"
        android:paddingRight="@dimen/btn_paddin_left_right"
        android:text="@string/homeDesignButton"
        android:background="#fff"
        android:textSize="@dimen/btn_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/max_height_img_home"
        android:adjustViewBounds="true"
        android:src="@drawable/architect_design"
        app:layout_constraintBottom_toTopOf="@+id/designButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_text_view_constraint"
        android:paddingLeft="@dimen/padding_left_right_text_view"
        android:paddingRight="@dimen/padding_left_right_text_view"
        android:drawableLeft="@drawable/curly_bracket_left"
        android:drawableRight="@drawable/curly_bracket_right"
        android:text="@string/homeDescription"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />




</androidx.constraintlayout.widget.ConstraintLayout>